# llamaindex_try

./: .env.example  .gitignore  CLAUDE.md  CLI_README.md  CLI_USAGE_CN.md  CREATE_LLAMA_ANALYSIS.md  FRONTEND_UPGRADE.md  HYBRID_RETRIEVAL_FIX.md  INDEXING_GUIDE.md  JIRA_SERVER_AUTH.md  MINERU_MODELSCOPE.md  MINERU_STATUS.md  PROGRESS.md  QUICK_FIX.md  QUICK_START.md  README.md  REFACTOR_PLAN.md  RETRIEVAL_CONFIG.md  TEST_REPORT.md  TEST_REPORT_FINAL.md  check_page2.py  check_pdf_toc.py  cli.py  config.yaml  config.yaml.example  download_mineru_models.py  mineru_config.yaml  mock_jira_server.py  openapi.json  pyproject.toml  simple_toc_test.py  test_bm25.py  test_cli.py  test_document.txt  test_document_parser.py  test_full_filtering.py  test_issue_types.py  test_mineru_local.py  test_mineru_toc.py  test_nvme_toc.py  (+2 more)
backend/: __init__.py  main.py
data/: cli_index_cache.json  test_cache.json  test_cache2.json
docs/: jira-deep-analysis-guide.md
frontend/: E2E_TESTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts
server/: .env.example  README.md  package-lock.json  package.json
test_output/: TEST-123_20260428_124040.html  TEST-123_20260428_124040.md  TEST-123_20260428_131110.html  TEST-123_20260428_131110.md  TEST-123_20260428_133323.html  TEST-123_20260428_133323.md  TEST-123_20260428_134002.html  TEST-123_20260428_134002.md  TEST-123_20260428_141327.html  TEST-123_20260428_141327.md  TEST-123_20260428_141821.html  TEST-123_20260428_141821.md  TEST-123_20260428_142412.html  TEST-123_20260428_142412.md  TEST-123_20260428_142736.md  (+15 more)
(+92 files in other folders)
